<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myo Hub</string>

    <string name="action_settings">Settings</string>

    <string name="prompt_notification_access_line1">Myo Hub requires notification access.</string>
    <string name="prompt_notification_access_line2">Tap here to enable.</string>

    <string name="empty_card_not_connected">No Myo\'s Connected!</string>

    <string name="myo_card_name_placeholder">Name: Adam\'s Myo</string>
    <string name="myo_card_mac_placeholder">MAC: 1E:1E:1E:1E:1E:1E</string>
    <string name="myo_card_status_placeholder">Status: Connected</string>
    <string name="myo_card_action_disconnect">DISCONNECT</string>

</resources>
